--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,17 @@
           <scope>compile</scope>
       </dependency>
 
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-core</artifactId>
+          <version>6.0.2.Final</version>
+      </dependency>
+      <dependency>
+          <groupId>org.hibernate.orm</groupId>
+          <artifactId>hibernate-core</artifactId>
+          <version>6.0.2.Final</version>
+      </dependency>
+
   </dependencies>
 
   <build>
