--- a/pom.xml
+++ b/pom.xml
@@ -64,16 +64,13 @@
           <scope>compile</scope>
       </dependency>
 
+      <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core-jakarta -->
       <dependency>
           <groupId>org.hibernate</groupId>
-          <artifactId>hibernate-core</artifactId>
-          <version>6.0.2.Final</version>
+          <artifactId>hibernate-core-jakarta</artifactId>
+          <version>5.6.15.Final</version>
       </dependency>
-      <dependency>
-          <groupId>org.hibernate.orm</groupId>
-          <artifactId>hibernate-core</artifactId>
-          <version>6.0.2.Final</version>
-      </dependency>
+
 
   </dependencies>
 
